data/all_generated_tests/raw_wast_tests/br_table_ImproperFunctionCallorReturnHandling_2398.wast
;; 8. **Test 8: Function Call From Dynamic Position**    - Description: Call a function from a dynamically determined position (e.g., `call_indirect`) then use `br_table`. Ensure proper flow.    - Constraint Checked: Correct function call using `call_indirect` and subsequent branching.    - Improper Function Call or Return Handling: Checking for proper function dispatch and branch after dynamic resolution.

(assert_invalid
  (module
    (type $t0 (func))
    (elem (i32.const 0) $func0)
    (table 1 funcref)
    (func $func0 (nop))
    (func $call_indirect_br_table (param i32)
      (block
        (block
          (call_indirect (type $t0) (local.get 0))
          (br_table 0 1 (i32.const 0))
        )
      )
    )
  )
  "type mismatch"
)